--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
 .App {
   text-align: center;
 }
+body {
+  background-color: aliceblue;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
 
 .App-logo {
   height: 40vmin;
